--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "expo": "^19.0.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1"
+    "react": "^16.0.0-alpha.12",
+    "react-native": "^0.46.1",
+    "react-native-swipeable": "^0.6.0"
   }
 }
