--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "^19.0.0",
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.46.1",
+    "react-native-modal-datetime-picker": "^4.9.0",
     "react-native-swipeable": "^0.6.0"
   }
 }
