--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "cheerio-without-node-native": "^0.20.2",
     "expo": "^19.0.0",
+    "lodash": "^4.17.4",
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.46.1",
     "react-native-modal-datetime-picker": "^4.9.0",
